--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -1,3 +1,10 @@
+@misc{NMEA_MAIN,
+  author = "National Marine Electronics Association",
+  title = "NMEA 0183 standard",
+  howpublished = {\url{http://www.nmea.org/content/nmea_standards/nmea_0183_v_410.asp}},
+  note = {Accessed: 23-10-2016}
+}
+
 @article{YLJRNR,
   author    = "Yilu Liu and Lamine Mili and Jaime De La Ree and Reynaldo Francisco Nuqui and Reynaldo Francisco Nuqui",
   title     = "State Estimation and Voltage Security Monitoring Using Synchronized Phasor Measurement",
@@ -213,6 +220,13 @@
   year={2010},
   publisher={No Starch Press}
 }
+
+@misc{BUG_TRACK,
+  title="The Kernel Bug Tracker",
+  url={https://bugzilla.kernel.org/show_bug.cgi?id=8691},
+  note = {Accessed: 02-03-2016}
+}
+
 
 % Comments:
 % Both C_RATIONAL and GNU_SOCKETS are obviously credited wrong.
