--- a/thesis/spoof_test.tex
+++ b/thesis/spoof_test.tex
@@ -23,7 +23,7 @@ Figure \ref{ibd} shows how the Server, Sensors and atomic clock where physically
 \end{figure}
 
 \subsection{Goal of test}
-The goal with this test was to use the Sensor Server system to detect a simulated spoofing attack. By moving the antennas, the KRL filter(\ref{kvsrlf}) should be triggered as the solved longitude, altitude, latitude and speed should change. The CM might also trigger. The result would be observable by analyzing the log files produced by the Server and Clients and the data collected by the measuring setup.
+The goal with this test was to use the Sensor Server system to detect a simulated spoofing attack. By moving the antennas, the KRL filter(\ref{kvsrlf}) should be triggered as the solved longitude, altitude, latitude and speed should change. The filters using the clock model might also trigger. The result would be observable by analyzing the log files produced by the Server and Clients and the data collected by the measuring setup.
 
 \subsection{Description}\label{description}
 The following is a step by step description of how the test was conducted. The time in the brackets was obtained from a wristwatch. It is written in the normal format as well as number of seconds after 10:48. This is because the data used to draw the graphs, started at 10:48 but uses seconds in the X axis. Comparison is therefore easier. It is important to note that nor the resolution or accuracy was of any notable concern when writing down the time. The time was mainly noted to make it easier to find any correlation between the steps taken and patterns found in the log files. 
@@ -52,6 +52,7 @@ The following is a step by step description of how the test was conducted. The t
 Step 1 and 2 were designed to trigger the KRL filter, especially the check of solved latitude, longitude and altitude but also the speed, against known values. Step 5 and 6 was also designed to trigger the KRL filter, but more specifically the checking of solved speed. Step 7 and 8 was to designed to reveal what would happen with the both the KRL and the CM filter during a jamming attack as it was believed that covering the antennas with aluminium foil would block all signals out.
 
 \subsection{Observations}\label{observations}
+\subsubsection{Sensor Server logs}
 By reviewing the log produced by the Sensor Server, the following was observed:
 
 \begin{itemize}
@@ -96,5 +97,8 @@ By reviewing the log produced by the Sensor Server, the following was observed:
   \end{lstlisting} 
 \end{itemize}
 
+\subsubsection{Measurements}
+
+
 \subsection{Conclusion}
-The observations reveal what we expected. After all, when moving a GPS receivers antenna, the solved position has to change. If it did not, the GPS receiver or antenna would have to be faulty. Step 5 and 6 (\ref) did not produce the expected result. The altitude, latitude and longitude was expected to be within a safe range, the solved speed on the other hand, was expected to have been way too high. (Kan ha vært pågrunn av at filteret ble lastet med hastighet oppgitt i ms istedet for knop. Dobbeltsjekk dette først.)
+The observations reveal what we expected. After all, when moving a GPS receivers antenna, the solved position has to change. If it did not, the GPS receiver or antenna would have to be faulty. Step 5 and 6 (\ref) did not produce the expected result. 
